--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-1"><strong>Only 1% Men Know this 10-Second Ritual</strong></h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-1"><strong>Only 1% Men Know this 10-Second Trick</strong></h3>
                 
                 
             </div>
